/*
 * Headwind MDM: Open Source Android MDM Software
 * https://h-mdm.com
 *
 * Copyright (C) 2019 Headwind Solutions LLC (http://h-sms.com)
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

buildscript {
    repositories {
        google()
        mavenCentral()
    }
}
apply plugin: 'com.android.application'

repositories {
    google()
    mavenCentral()
}

def stringConfig = { String propertyName, String envName, String fallback ->
    def value = project.findProperty(propertyName)
    if (value == null || value.toString().trim().isEmpty()) {
        value = System.getenv(envName)
    }
    if (value == null) {
        value = fallback
    }
    return "\"" + value.toString().replace("\\", "\\\\").replace("\"", "\\\"") + "\""
}

def booleanConfig = { String propertyName, String envName, boolean fallback ->
    def value = project.findProperty(propertyName)
    if (value == null || value.toString().trim().isEmpty()) {
        value = System.getenv(envName)
    }
    if (value == null || value.toString().trim().isEmpty()) {
        return fallback.toString()
    }
    return (value.toString().equals("1") || value.toString().equalsIgnoreCase("true")).toString()
}

android {
    compileSdkVersion 35
    defaultConfig {
        applicationId "com.alkhwarizmi.mdm"
        //minSdkVersion 16
        // Starting with version 6.33, we use newer version of com.fasterxml.jackson
        // which is only compatible with API 26 (Android 8+).
        // To avoid failures after the upgrade, the minimal SDK version increased here.
        // If it is required to maintain the backward compatibility with Android 5-7,
        // downgrade the dependency to com.fasterxml.jackson to 2.13.5
        minSdkVersion 26
        // Kept at 34 intentionally: targetSdk 35 (Android 15) enforces edge-to-edge,
        // which needs proper window-insets handling in the launcher UI (a dedicated
        // task, not a dependency bump). compileSdk is already 35.
        targetSdkVersion 34
        versionCode 15360
        versionName "6.36"
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        dataBinding {
            enabled = true
        }
        buildFeatures {
            aidl true
            buildConfig = true
        }
        namespace 'com.hmdm.launcher'
        multiDexEnabled true

        // Default URL of the web panel (scheme + host!)
        buildConfigField("String", "BASE_URL", stringConfig("hmdmBaseUrl", "HMDM_BASE_URL", "https://khwarizmi.co.id/"))
        // URL of the secondary address of your web panel, called when the primary host is not available.
        // Could be equal to the BASE_URL parameter
        buildConfigField("String", "SECONDARY_BASE_URL", stringConfig("hmdmSecondaryBaseUrl", "HMDM_SECONDARY_BASE_URL", "https://khwarizmi.co.id/"))
        // Relative path of the web panel on the server. Keep it empty if installed in the root
        buildConfigField("String", "SERVER_PROJECT", "\"\"")
        // This parameter manages how the device ID should be set up at first start
        // "user" - user enters it manually
        // "suggest" - user can select among few predefined values (IMEI, serial, MAC)
        // "imei", "serial", "mac" - set the selected parameter as device ID without user interaction
        buildConfigField("String", "DEVICE_ID_CHOICE", "\"user\"")
        // Enables Push notifications. Setting it to false will stop automatic configuration updates after changing it on the server.
        buildConfigField("Boolean", "ENABLE_PUSH", "true")
        // MQTT port for Push notifications
        buildConfigField("Integer", "MQTT_PORT", "31000")
        // Set this parameter to true if you'll grant system privileges to Headwind MDM (signing it by system keys).
        // This will enable silent installation and the launcher will try to get the device owner rights by updating system files.
        // This may be useful, for example, when your device doesn't have QR code provisioning capability.
        buildConfigField("Boolean", "SYSTEM_PRIVILEGES", "false")
        // Set this parameter to true if you'd like to trust every certificate, for example, self-signed
        // Not recommended for security purposes!
        buildConfigField("Boolean", "TRUST_ANY_CERTIFICATE", "false")
        // A shared secret to sign server config requests and MQTT (Push) messages
        buildConfigField("String", "REQUEST_SIGNATURE", stringConfig("hmdmRequestSignature", "HMDM_REQUEST_SIGNATURE", "20089b856964c5b5f71f1d0b"))
        // Set this parameter to true if the server signature should be checked
        // (additional protection against Man-In-The-Middle attacks)
        buildConfigField("Boolean", "CHECK_SIGNATURE", booleanConfig("hmdmCheckSignature", "HMDM_CHECK_SIGNATURE", true))
        // ANR watchdog flag (for testing purposes only as this watchdog may drain the resources!)
        buildConfigField("Boolean", "ANR_WATCHDOG", "false")
        // If set to true, the server URL will be requested in UI in non-MDM mode even if it is hardcoded in build.gradle
        // See the related "if" statement in MainActivity.java
        buildConfigField("Boolean", "REQUEST_SERVER_URL", "true")
        // Set to true to debug admin receiver via remote logging
        buildConfigField("Boolean", "DEVICE_ADMIN_DEBUG", "false")
        // Set to true to enable kiosk mode even if the app can't draw over other windows
        // This may be required for weak devices where drawing over other windows is disabled by OS
        buildConfigField("Boolean", "ENABLE_KIOSK_WITHOUT_OVERLAYS", "false")
        // Foreground service for MQTT: prevents OS from killing MQTT service on weak devices
        buildConfigField("Boolean", "MQTT_SERVICE_FOREGROUND", "true")
        // Set Headwind MDM to default launcher at early time of the first start
        // to prevent the user from clicking Home and stop initializing Headwind MDM
        buildConfigField("Boolean", "SET_DEFAULT_LAUNCHER_EARLY", "false")
        // Adjust application selection on TV boxes
        buildConfigField("Boolean", "SELECTED_ITEM_BY_CLICK", "false")
        // Adjust application selection on TV boxes
        buildConfigField("Boolean", "DISABLE_ORIENTATION_LOCK", "false")
        // API key for the authorization of privileged library requests
        buildConfigField("String", "LIBRARY_API_KEY", stringConfig("hmdmLibraryApiKey", "HMDM_LIBRARY_API_KEY", ""))
        // Use accessibility services to control unwanted apps
        // (this option is banned by Play Protect in some countries!)
        buildConfigField("Boolean", "USE_ACCESSIBILITY", "false")
        // Disabled by default because it executes arbitrary shell commands from remote push payloads.
        buildConfigField("Boolean", "ENABLE_REMOTE_SHELL", booleanConfig("hmdmEnableRemoteShell", "HMDM_ENABLE_REMOTE_SHELL", false))
    }
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
            debuggable false
        }
        debug {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }

    packagingOptions {
        exclude 'META-INF/DEPENDENCIES.txt'
        exclude 'META-INF/LICENSE.txt'
        exclude 'META-INF/NOTICE.txt'
        exclude 'META-INF/NOTICE'
        exclude 'META-INF/NOTICE.md'
        exclude 'META-INF/LICENSE'
        exclude 'META-INF/LICENSE.md'
        exclude 'META-INF/DEPENDENCIES'
        exclude 'META-INF/notice.txt'
        exclude 'META-INF/license.txt'
        exclude 'META-INF/dependencies.txt'
        exclude 'META-INF/LGPL2.1'
    }

    flavorDimensions "all"

    productFlavors {
        opensource { }
    }
}

dependencies {
    implementation fileTree(include: ['*.jar'], dir: 'libs')
    androidTestImplementation('androidx.test.espresso:espresso-core:3.6.1', {
        exclude group: 'com.android.support', module: 'support-annotations'
    })
    implementation 'androidx.appcompat:appcompat:1.7.0'
    testImplementation 'junit:junit:4.13.2'
    implementation 'androidx.recyclerview:recyclerview:1.3.2'
    implementation 'com.google.android.material:material:1.12.0'
    implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.1.0'

    // MQTT messaging
    implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.0'

    // Picasso (OkHttp3Downloader is bundled since 2.71828; the separate
    // jakewharton picasso2-okhttp3-downloader is no longer needed)
    implementation 'com.squareup.picasso:picasso:2.71828'

    // Retrofit
    implementation 'com.squareup.retrofit2:retrofit:3.0.0'
    implementation 'com.squareup.retrofit2:converter-jackson:3.0.0'

    // Jackson
    implementation 'com.fasterxml.jackson.core:jackson-core:2.21.1'
    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.21'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.21.1'

    // Worker
    implementation 'androidx.work:work-runtime:2.10.0'

    implementation('com.journeyapps:zxing-android-embedded:4.3.0') { transitive = false }
    implementation 'com.google.zxing:core:3.5.3'
    implementation group: 'commons-io', name: 'commons-io', version: '2.17.0'

    // JAX-B dependencies for JDK 9+
    implementation "jakarta.xml.bind:jakarta.xml.bind-api:2.3.2"
    implementation "org.glassfish.jaxb:jaxb-runtime:2.3.2"
}
